@@ -1366,14 +1366,55 @@ static double do_diff (double a, double b)
 {
    return fabs(a-b);
 }
+
+/* num is assumed to be at least 2 here */
+static int do_binary_function_on_nargs (double (*f)(double, double), int num)
+{
+   int depth = SLstack_depth () - num;
+
+   num--;			       /* first time consumes 2 args */
+   while (num > 0)
+     {
+	if (-1 == do_binary_function (f))
+	  {
+	     num = SLstack_depth () - depth;
+	     if (num > 0)
+	       (void) SLdo_pop_n ((unsigned int) num);
+	     return -1;
+	  }
+	num--;
+     }
+   return 0;
+}
+
 static void min_fun (void)
 {
-   (void) do_binary_function (do_min);
+   int num = SLang_Num_Function_Args;
+
+   if (num <= 0)
+     {
+	SLang_verror (SL_Usage_Error, "_min: Expecting at least one argument");
+	return;
+     }
+
+   if (num > 1)
+     (void) do_binary_function_on_nargs (do_min, num);
 }
+
 static void max_fun (void)
 {
-   (void) do_binary_function (do_max);
+   int num = SLang_Num_Function_Args;
+
+   if (num <= 0)
+     {
+	SLang_verror (SL_Usage_Error, "_max: Expecting at least one argument");
+	return;
+     }
+
+   if (num > 1)
+     (void) do_binary_function_on_nargs (do_max, num);
 }
+
 static void diff_fun (void)
 {
    (void) do_binary_function (do_diff);
